completed random, square, sqrt

--- a/views/square_root.erb
+++ b/views/square_root.erb
@@ -1,8 +1,8 @@
 <h1>Enter a Number:</h1>
 
-<form action="/process_url">
+<form action="/process_url/squareroot">
   <label for="num_id">Enter a Number: </label>
   <input id="num_id" type="text" name="number">
  
-  <button>Calculate Square</button>
+  <button>Calculate Square Root</button>
 </form>
